# Anakin

./: .CMakeLists.txt.swp  .gitignore  .travis.yml  :w  AUTHORS.md  BCLOUD  CMakeLists.txt  LICENSE  README.md  buffer  buffer_new  build.sh  qatest  run.sh  sysqa  test.me  test_sysqa
examples/: CMakeLists.txt  README.md  example_introduction_cn.md
examples/amd/: classification.cpp
examples/anakin/: anakin_helper.h  build.sh  build_cpu_arch.sh  example.cpp  get_cpu_arch.cpp  map_rnn.cpp
examples/arm/: classification.cpp  mobilenet_ssd_detection.cpp  ssd_detection.cpp
examples/cuda/: example_nv_cnn_net.cpp  example_nv_cnn_net_multi_thread.cpp  nv_detection.cpp
examples/x86/: example_x86_rnn_net.cpp
framework/: .CMakeLists.txt.swp  CMakeLists.txt
framework/c_api/: anakin_runner.cpp  anakin_runner.h
framework/core/: .thread_pool.h.swp  .type_traits_extend.h.swp  .types.h.swp  any.h  base.h  common_macros.h  data_types.h  factory.h  functor.cpp  functor.h  mem_info.h  parameter.h  singleton.cpp  singleton.h  thread_pool.h  thread_pool.inl  thread_safe_macros.h  tls.h  type_traits_extend.h  types.h
framework/graph/: .graph.cpp.swp  .graph.h.swp  algorithm.h  algorithm.inl  arc.h  arc.inl  graph.cpp  graph.h  graph_base.h  graph_base.inl  graph_global_mem.h  node.cpp  node.h
framework/lite/: .binary_writter.h.swp  .code_gen_base.cpp.swp  .code_gen_base.h.swp  .code_gen_cpp.cpp.swp  .code_gen_cpp.h.swp  .code_writter.h.swp  .file_stream.h.swp  .op_map.h.swp  .op_map_cpp.cpp.swp  CMakeLists.txt  binary_writter.h  code_gen_base.cpp  code_gen_base.h  code_gen_cpp.cpp  code_gen_cpp.h  code_writter.h  file_stream.h  op_map.cpp  op_map.h  op_map_cpp.cpp  utils.h
framework/model_parser/: CMakeLists.txt  README.md
framework/operators/: activation.cpp  activation.h  affine_channel.cpp  affine_channel.h  aligned_mat_mul.cpp  aligned_mat_mul.h  anchor_generator.cpp  anchor_generator.h  arg_max.cpp  arg_max.h  arithmetic.cpp  arithmetic.h  attension_lstm.cpp  attension_lstm.h  attention_padding_mask.cpp  attention_padding_mask.h  axpy.cpp  axpy.h  batch_norm.cpp  batch_norm.h  box_clip.cpp  box_clip.h  box_coder.cpp  box_coder.h  cast.cpp  cast.h  concat.cpp  concat.h  conv_3x3.cpp  conv_3x3.h  conv_unpadding_padding.cpp  conv_unpadding_padding.h  convolution.cpp  convolution.h  coord2patch.cpp  coord2patch.h  cos_sim.cpp  cos_sim.h  crf_decoding.cpp  crf_decoding.h  (+145 more)
framework/service/: CMakeLists.txt  anakin_service.cpp  anakin_service.h  device_info.cpp  device_info.h  monitor.cpp  monitor.h  service_daemon.cpp  service_daemon.h
framework/utils/: csv.h  data_common.cpp  data_common.h  layout_common.h  parameter_fusion.cpp  parameter_fusion.h
saber/: .CMakeLists.txt.swp  .saber_funcs_param.h.swp  CMakeLists.txt  saber.h  saber_funcs_param.h  saber_sp_param.h  saber_types.h  utils.h
saber/core/: buffer.h  common.h  context.h  data_traits.h  device.h  env.cpp  env.h  events.h  shape.h  target_traits.h  target_wrapper.h  tensor.cpp  tensor.h  tensor_op.cpp  tensor_op.h  tensor_traits.h
saber/funcs/: .funcs_utils.h.swp  .gitignore  CMakeLists.txt  activation.h  affine_channel.h  aligned_mat_mul.h  anchor_generator.h  argmax.h  arithmetic.h  attension_lstm.h  attention_padding_mask.h  axpy.h  base.h  batch_gemm.h  batch_norm.h  box_clip.h  box_coder.h  calibrate.h  cast.h  concat.h  conv.h  conv_act.h  conv_act_pooling.h  conv_eltwise.h  conv_pooling.h  conv_shift.h  conv_unpadding_padding.h  coord2patch.h  cos_sim.h  crf_decoding.h  crop.h  ctc_align.h  cumsum.h  debug.h  deconv.h  deconv_act.h  deformable_conv.h  detection_output.h  dfmb_psroi_align.h  eltwise.h  (+78 more)
sgx/: CMakeLists.txt
sgx/enclave/: .gitignore  enclave.edl  enclave.lds  version.lds
test/: CMakeLists.txt
test/arm/: test_saber_func_permute_arm.cpp  test_saber_func_sgemm_arm.cpp  test_saber_func_softmax_arm.cpp
test/lite/: cv_bgra_utils.h  cv_utils_basic.h  test_activation_lite.cpp  test_buffer_lite.cpp  test_calibrate_lite.cpp  test_concat_lite.cpp  test_context_lite.cpp  test_conv_act_lite.cpp  test_conv_act_pooling_lite.cpp  test_conv_block_utils.cpp  test_conv_lite.cpp  test_conv_lite_int8.cpp  test_deconv_lite.cpp  test_deconv_lite_int8.cpp  test_eltwise_act_lite.cpp  test_eltwise_lite.cpp  test_lite.h  test_lite_aot_model.cpp  test_lite_gemm_prepacked_int8.cpp  test_lite_merged_model.cpp  test_lite_merged_model_from_mem.cpp  test_lite_model.cpp  test_lite_model_from_mem.cpp  test_lite_net.cpp  test_lite_seg_precision.cpp  test_lite_sgemm.cpp  test_lite_sgemm_prepacked.cpp  test_lite_sgemm_prepacked_int8.cpp  test_lite_sgemv.cpp  test_lite_sgemv_int8.cpp  test_lite_utils.cpp  test_lite_utils_by_readimg.cpp  test_pad2d_lite.cpp  test_param.cpp  test_pooling_lite.cpp  test_pooling_lite_int8.cpp  test_priorbox_lite.cpp  test_resize_lite.cpp  test_softmax_lite.cpp  test_tensor_lite.cpp
test/saber/: conv_func_helper.h  test_direct_conv_int8.cpp  test_saber_activation.cpp  test_saber_affine_channel.cpp  test_saber_aligned_mat_mul.cpp  test_saber_anchor_generator.cpp  test_saber_argmax.cpp  test_saber_arithmetic.cpp  test_saber_attension_lstm.cpp  test_saber_attention_padding_mask.cpp  test_saber_axpy.cpp  test_saber_base.h  test_saber_box_clip.cpp  test_saber_box_coder.cpp  test_saber_buffer.cpp  test_saber_cast.cpp  test_saber_concat.cpp  test_saber_concat_int8.cpp  test_saber_context.cpp  test_saber_conv.cpp  test_saber_conv_eltwise.cpp  test_saber_conv_eltwise_int8.cpp  test_saber_conv_int8.cpp  test_saber_conv_int8_arm.cpp  test_saber_conv_pooling.cpp  test_saber_conv_pooling_int8.cpp  test_saber_conv_shift.cpp  test_saber_conv_unpadding_padding.cpp  test_saber_cos_sim.cpp  test_saber_crf_decoding.cpp  test_saber_crop.cpp  test_saber_cumsum.cpp  test_saber_deconv.cpp  test_saber_deconv_arm.cpp  test_saber_deconv_int8_arm.cpp  test_saber_deformable_conv.cpp  test_saber_depthwise_conv.cpp  test_saber_detection_output.cpp  test_saber_dfmb_psroi_align.cpp  test_saber_eltwise.cpp  (+70 more)
tools/anakin-lite/: .gitignore  CMakeLists.txt  README.md  andrid_build.sh  build_ios_merge.sh  lite_android_build.sh  (+8 more)
(+1961 files in other folders)
